tests/baselines/reference/amdDependencyComment1.errors.txt
==== tests/cases/compiler/amdDependencyComment1.ts (3 errors) ====
    ///<amd-dependency path='bar'/>
    
    import m1 = require("m2")
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"m2"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    m1.f();
    ~~
!!! error TS2095: Could not find symbol 'm1'.